#33-도메인 분리 및 로직 수정 - 아직 모든 기능을 테스트 해보진 않음(단위테스트 필요성)