@@ -1,23 +1,29 @@
 package com.wap.GgoememeBackend.service;
 
 import com.wap.GgoememeBackend.domain.Post;
+import com.wap.GgoememeBackend.domain.PostBookmarkedUser;
 import com.wap.GgoememeBackend.domain.User;
 import com.wap.GgoememeBackend.payload.MyPageDto;
 import com.wap.GgoememeBackend.payload.PostPreviewDtos;
-import com.wap.GgoememeBackend.repository.UserRepository;
+import com.wap.GgoememeBackend.repository.mongo.PostRepository;
+import com.wap.GgoememeBackend.repository.mysql.UserRepository;
 import com.wap.GgoememeBackend.security.UserPrincipal;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Optional;
-import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 public class MyPageService {
-    @Autowired
     public UserRepository userRepository;
+    public PostRepository postRepository;
+
+    public MyPageService(UserRepository userRepository, PostRepository postRepository) {
+        this.userRepository = userRepository;
+        this.postRepository = postRepository;
+    }
 
     public MyPageDto findMyPage(Long userId) throws RuntimeException{
         Optional<User> optionalUser = userRepository.findById(userId);
@@ -31,9 +37,13 @@ public class MyPageService {
     public PostPreviewDtos getBookmarkedPosts(UserPrincipal userPrincipal) {
         User user = userRepository.findById(userPrincipal.getId())
                 .orElseThrow(() -> new NoSuchElementException("No user found"));
-        Set<Post> bookmarkedPosts = user.getBookmarkedPosts();
 
-        List<Post> posts = bookmarkedPosts.stream().toList();
+        List<PostBookmarkedUser> bookmarkedPosts = user.getBookmarkedPosts();
+        List<String> postIds = bookmarkedPosts.stream()
+                .map(postBookmarkedUser -> postBookmarkedUser.getPostId())
+                .collect(Collectors.toList());
+        List<Post> posts = postRepository.findAllById(postIds);
+
         return PostPreviewDtos.of(posts);
     }
 }
